--- a/templates/layout.html
+++ b/templates/layout.html
@@ -173,14 +173,14 @@
         <div class="container text-center">
             <span class="text-muted">© 2024 Phát hiện Gian lận | Neo4j + Python</span>
         </div>
-    </footer>    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </footer>      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
     <script src="{{ url_for('static', filename='js/community_viewer.js') }}"></script>
     <script src="{{ url_for('static', filename='js/fraud_transactions.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/fixes.js') }}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
